chore: adjust UI, more see rauchg.com/essays

--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer id="footer">
+<!-- <footer id="footer">
   <% if (theme.sidebar === 'bottom'){ %>
     <%- partial('_partial/sidebar') %>
   <% } %>
@@ -8,4 +8,4 @@
       <%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a>
     </div>
   </div>
-</footer>
+</footer> -->
