--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -1,8 +1,11 @@
 .article
-  margin: block-margin 0
+  margin: block-margin 0;
+  max-width: 650px;
+  margin: auto;
+  font-size: 14px;
+  display: block;
 
 .article-inner
-  @extend $block
   overflow: hidden
 
 .article-meta
@@ -26,7 +29,7 @@
   margin: 0 12px 1em
 
 .article-header
-  padding: article-padding article-padding 0
+  margin: 10px 0
 
 .article-title
   text-decoration: none
@@ -42,7 +45,6 @@
   @extend $base-style
   clearfix()
   color: color-default
-  padding: 0 article-padding
   p, table
     line-height: line-height
     margin: line-height 0
@@ -52,10 +54,12 @@
     line-height: line-height-title
     margin: line-height-title 0
   a
-    color: color-link
+    color: my-link
     text-decoration: none
     &:hover
-      text-decoration: underline
+      text-decoration: none
+      background-color: my-link
+      color: #fff
   ul, ol, dl
     margin-top: line-height
     margin-bottom: line-height
@@ -213,7 +217,6 @@
 
 .article-nav-caption
   text-transform: uppercase
-  letter-spacing: 2px
   color: color-border
   line-height: 1em
   font-weight: bold
