--- a/themes/landscape/source/css/_partial/highlight.styl
+++ b/themes/landscape/source/css/_partial/highlight.styl
@@ -60,6 +60,9 @@ $line-numbers
       margin-bottom: 1em
       a
         float: right
+    .gutter
+      .line
+        padding-left: 20px        
     .gutter pre
       @extend $line-numbers
       text-align: right
