--- a/themes/landscape/layout/_partial/archive.ejs
+++ b/themes/landscape/layout/_partial/archive.ejs
@@ -12,9 +12,9 @@
       <% } %>
       <% last = year; %>
       <section class="archives-wrap">
-        <div class="archive-year-wrap">
+        <!-- <div class="archive-year-wrap">
           <a href="<%- url_for(config.archive_dir + '/' + year) %>" class="archive-year"><%= year %></a>
-        </div>
+        </div> -->
         <div class="archives">
     <% } %>
     <%- partial('archive-post', {post: post, even: i % 2 == 0}) %>
