--- a/themes/landscape/layout/_partial/post/date.ejs
+++ b/themes/landscape/layout/_partial/post/date.ejs
@@ -1,3 +1,6 @@
-<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
+<!-- <a href="<%- url_for(post.path) %>" class="<%= class_name %>">
   <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, date_format) %></time>
-</a>
+</a> -->
+<span class="<%= class_name %>">
+  <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, date_format) %></time>
+</span>
