--- a/themes/landscape/layout/_partial/post/title.ejs
+++ b/themes/landscape/layout/_partial/post/title.ejs
@@ -1,15 +1,15 @@
 <% if (post.link){ %>
-  <h1 itemprop="name">
+  <span itemprop="name">
     <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title %></a>
-  </h1>
+  </span>
 <% } else if (post.title){ %>
   <% if (index){ %>
-    <h1 itemprop="name">
+    <span itemprop="name">
       <a class="<%= class_name %>" href="<%- url_for(post.path) %>"><%= post.title %></a>
-    </h1>
+    </span>
   <% } else { %>
-    <h1 class="<%= class_name %>" itemprop="name">
+    <span class="<%= class_name %>" itemprop="name">
       <%= post.title %>
-    </h1>
+    </span>
   <% } %>
 <% } %>
