--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -1,19 +1,7 @@
 #header
-  height: banner-height
+  // height: banner-height
   position: relative
-  border-bottom: 1px solid color-border
-  &:before, &:after
-    content: ""
-    position: absolute
-    left: 0
-    right: 0
-    height: 40px
-  &:before
-    top: 0
-    background: linear-gradient(rgba(0, 0, 0, 0.2), transparent)
-  &:after
-    bottom: 0
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.2))
+  // border-bottom: 1px solid color-border
 
 #header-outer
   height: 100%
@@ -29,7 +17,7 @@
   left: 0
   width: 100%
   height: 100%
-  background: url(banner-url) center #000
+  // background: url(banner-url) center #000
   background-size: cover
   z-index: -1
 
@@ -51,13 +39,11 @@ $logo-text
   @extend $logo-text
   font-size: logo-size
   line-height: logo-size
-  letter-spacing: 2px
 
 #subtitle
   @extend $logo-text
   font-size: subtitle-size
   line-height: subtitle-size
-  letter-spacing: 1px
 
 #subtitle-wrap
   margin-top: subtitle-size
@@ -68,15 +54,13 @@ $logo-text
 
 $nav-link
   float: left
-  color: #fff
-  opacity: 0.6
+  color: orange
   text-decoration: none
-  text-shadow: 0 1px rgba(0, 0, 0, 0.2)
-  transition: opacity 0.2s
   display: block
-  padding: 20px 15px
+  margin: 20px 15px
   &:hover
-    opacity: 1
+    color: #fff;
+    background: orange;
 
 .nav-icon
   @extend $nav-link
@@ -91,8 +75,6 @@ $nav-link
 
 .main-nav-link
   @extend $nav-link
-  font-weight: 300
-  letter-spacing: 1px
   @media mq-mobile
     display: none
 
